fix: resolve IDE warnings across security and config modules
- Replace deprecated Locale(String) constructor with Locale.of()
- Add @Builder.Default to DTO fields with initializers
- Remove unused userProfileRepository from UserServiceImpl